@@ -1,214 +1,0 @@
-# -*- coding: utf-8 -*-
-
-import os.path
-import sys
-from StringIO import StringIO
-from sets import Set
-from App.Common import package_home
-from Products.CMFCore.utils import getToolByName
-from Products.CMFCore.utils import manage_addTool
-from Products.ExternalMethod.ExternalMethod import ExternalMethod
-from zExceptions import NotFound, BadRequest
-
-from Products.Archetypes.Extensions.utils import installTypes
-from Products.Archetypes.Extensions.utils import install_subskin
-from Products.Archetypes.config import TOOL_NAME as ARCHETYPETOOLNAME
-from Products.Archetypes.atapi import listTypes
-from Products.feedfeeder.config import PROJECTNAME
-from Products.feedfeeder.config import product_globals as GLOBALS
-
-def install(self, reinstall=False):
-    """ External Method to install feedfeeder """
-    out = StringIO()
-    print >> out, "Installation log of %s:" % PROJECTNAME
-
-    # If the config contains a list of dependencies, try to install
-    # them.  Add a list called DEPENDENCIES to your custom
-    # AppConfig.py (imported by config.py) to use it.
-    try:
-        from Products.feedfeeder.config import DEPENDENCIES
-    except:
-        DEPENDENCIES = []
-    portal = getToolByName(self,'portal_url').getPortalObject()
-    quickinstaller = portal.portal_quickinstaller
-    for dependency in DEPENDENCIES:
-        print >> out, "Installing dependency %s:" % dependency
-        quickinstaller.installProduct(dependency)
-        import transaction
-        transaction.savepoint(optimistic=True)
-
-    classes = listTypes(PROJECTNAME)
-    installTypes(self, out,
-                 classes,
-                 PROJECTNAME)
-    install_subskin(self, out, GLOBALS)
-
-
-    # try to call a workflow install method
-    # in 'InstallWorkflows.py' method 'installWorkflows'
-    try:
-        installWorkflows = ExternalMethod('temp', 'temp',
-                                          PROJECTNAME+'.InstallWorkflows',
-                                          'installWorkflows').__of__(self)
-    except NotFound:
-        installWorkflows = None
-
-    if installWorkflows:
-        print >>out,'Workflow Install:'
-        res = installWorkflows(self,out)
-        print >>out,res or 'no output'
-    else:
-        print >>out,'no workflow install'
-
-
-    # enable portal_factory for given types
-    factory_tool = getToolByName(self,'portal_factory')
-    factory_types=[
-        "FeedConsumer",
-        "StandardContentHandler",
-        "FeedfeederFolder",
-        "FeedFeederItem",
-        ] + factory_tool.getFactoryTypes().keys()
-    factory_tool.manage_setPortalFactoryTypes(listOfTypeIds=factory_types)
-
-    from Products.feedfeeder.config import STYLESHEETS
-    try:
-        portal_css = getToolByName(portal, 'portal_css')
-        for stylesheet in STYLESHEETS:
-            try:
-                portal_css.unregisterResource(stylesheet['id'])
-            except:
-                pass
-            defaults = {'id': '',
-            'media': 'all',
-            'enabled': True}
-            defaults.update(stylesheet)
-            portal_css.manage_addStylesheet(**defaults)
-    except:
-        # No portal_css registry
-        pass
-    from Products.feedfeeder.config import JAVASCRIPTS
-    try:
-        portal_javascripts = getToolByName(portal, 'portal_javascripts')
-        for javascript in JAVASCRIPTS:
-            try:
-                portal_javascripts.unregisterResource(javascript['id'])
-            except:
-                pass
-            defaults = {'id': ''}
-            defaults.update(javascript)
-            portal_javascripts.registerScript(**defaults)
-    except:
-        # No portal_javascripts registry
-        pass
-
-    # try to call a custom install method
-    # in 'AppInstall.py' method 'install'
-    try:
-        install = ExternalMethod('temp', 'temp',
-                                 PROJECTNAME+'.AppInstall', 'install')
-    except NotFound:
-        install = None
-
-    if install:
-        print >>out,'Custom Install:'
-        try:
-            res = install(self, reinstall)
-        except TypeError:
-            res = install(self)
-        if res:
-            print >>out,res
-        else:
-            print >>out,'no output'
-    else:
-        print >>out,'no custom install'
-    return out.getvalue()
-
-def uninstall(self, reinstall=False):
-    out = StringIO()
-
-    # try to call a workflow uninstall method
-    # in 'InstallWorkflows.py' method 'uninstallWorkflows'
-    try:
-        uninstallWorkflows = ExternalMethod('temp', 'temp',
-                                            PROJECTNAME+'.InstallWorkflows',
-                                            'uninstallWorkflows').__of__(self)
-    except NotFound:
-        uninstallWorkflows = None
-
-    if uninstallWorkflows:
-        print >>out, 'Workflow Uninstall:'
-        res = uninstallWorkflows(self, out)
-        print >>out, res or 'no output'
-    else:
-        print >>out,'no workflow uninstall'
-
-    # try to call a custom uninstall method
-    # in 'AppInstall.py' method 'uninstall'
-    try:
-        uninstall = ExternalMethod('temp', 'temp',
-                                   PROJECTNAME+'.AppInstall', 'uninstall')
-    except:
-        uninstall = None
-
-    if uninstall:
-        print >>out,'Custom Uninstall:'
-        try:
-            res = uninstall(self, reinstall)
-        except TypeError:
-            res = uninstall(self)
-        if res:
-            print >>out,res
-        else:
-            print >>out,'no output'
-    else:
-        print >>out,'no custom uninstall'
-
-    return out.getvalue()
-
-def beforeUninstall(self, reinstall, product, cascade):
-    """ try to call a custom beforeUninstall method in 'AppInstall.py'
-        method 'beforeUninstall'
-    """
-    out = StringIO()
-    try:
-        beforeuninstall = ExternalMethod('temp', 'temp',
-                                   PROJECTNAME+'.AppInstall', 'beforeUninstall')
-    except:
-        beforeuninstall = []
-
-    if beforeuninstall:
-        print >>out, 'Custom beforeUninstall:'
-        res = beforeuninstall(self, reinstall=reinstall
-                                  , product=product
-                                  , cascade=cascade)
-        if res:
-            print >>out, res
-        else:
-            print >>out, 'no output'
-    else:
-        print >>out, 'no custom beforeUninstall'
-    return (out,cascade)
-
-def afterInstall(self, reinstall, product):
-    """ try to call a custom afterInstall method in 'AppInstall.py' method
-        'afterInstall'
-    """
-    out = StringIO()
-    try:
-        afterinstall = ExternalMethod('temp', 'temp',
-                                   PROJECTNAME+'.AppInstall', 'afterInstall')
-    except:
-        afterinstall = None
-
-    if afterinstall:
-        print >>out, 'Custom afterInstall:'
-        res = afterinstall(self, product=None
-                               , reinstall=None)
-        if res:
-            print >>out, res
-        else:
-            print >>out, 'no output'
-    else:
-        print >>out, 'no custom afterInstall'
-    return out
